Bug #228720 --> Don't down-convert message to plain text if dir attribute is set for RTL users.

r/sr=bienvenu